--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
     "@nestjs/core": "^10.3.3",
     "@nestjs/platform-express": "^10.3.3",
     "@prisma/client": "^5.10.2",
+    "@sendgrid/mail": "^8.1.6",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "date-fns": "^3.3.1",
@@ -46,6 +47,7 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.30",
+    "@types/sendgrid": "^2.0.31",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^7.3.1",
     "@typescript-eslint/parser": "^7.3.1",
